--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
-
+.env
 # dependencies
 /node_modules
 
@@ -7,7 +7,7 @@
 /coverage
 
 # production
-/build
+/build 
 
 # misc
 .DS_Store
